fix modal header align items

--- a/src/common.blocks/modal/modal__header.less
+++ b/src/common.blocks/modal/modal__header.less
@@ -1,9 +1,10 @@
 .modal__header {
     position: relative;
-    height: 53px;
+    min-height: 53px;
     overflow: scroll ;
     display: flex;
     justify-content: space-between;
+    align-items: center;
     border-bottom: 2px solid #c4c4c4;
     @media (min-width:768px){
         display: none;
